Update project with latest changes

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ POSTGRES_PORT=5432
 
 WEAVIATE_URL=http://weaviate:8080
 
-GROQ_API_KEY=gsk_...
+GROQ_API_KEY=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
 LOG_LEVEL=INFO
