--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ sqlalchemy==2.0.36
 asyncpg==0.30.0
 weaviate-client==4.10.2
 sentence-transformers==3.3.1
+transformers==4.57.3
+tokenizers==0.22.1
 pypdf==5.1.0
 python-multipart==0.0.19
-groq==0.5.0
-httpx==0.28.1
+groq==0.9.0
+httpx==0.27.0
 pydantic-settings==2.7.0
 structlog==24.4.0
-torch==2.5.1 --index-url https://download.pytorch.org/whl/cpu
